--- a/packages/react-native-aria/package.json
+++ b/packages/react-native-aria/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-aria",
-  "version": "0.2.2",
+  "version": "0.2.2-alpha.0",
   "description": "> TODO: description",
   "author": "nishan <nishanbende@gmail.com>",
   "homepage": "",
@@ -30,14 +30,14 @@
   },
   "dependencies": {
     "@react-native-aria/button": "^0.2.1",
-    "@react-native-aria/checkbox": "^0.2.1",
+    "@react-native-aria/checkbox": "^0.2.2-alpha.0",
     "@react-native-aria/focus": "^0.2.1",
     "@react-native-aria/interactions": "^0.2.1",
     "@react-native-aria/menu": "^0.2.1",
     "@react-native-aria/overlays": "^0.2.1",
     "@react-native-aria/radio": "^0.2.1",
-    "@react-native-aria/toggle": "^0.2.1",
-    "@react-native-aria/utils": "^0.2.1",
-    "@react-native-aria/switch": "^0.2.1"
+    "@react-native-aria/switch": "^0.2.2-alpha.0",
+    "@react-native-aria/toggle": "^0.2.2-alpha.0",
+    "@react-native-aria/utils": "^0.2.1"
   }
 }
