--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/toggle",
-  "version": "0.2.1",
+  "version": "0.2.2-alpha.0",
   "description": "> TODO: description",
   "author": "nishan <nishanbende@gmail.com>",
   "homepage": "",
