--- a/package.json
+++ b/package.json
@@ -12,25 +12,23 @@
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react-native": "0.63.4",
     "commitlint": "^11.0.0",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "expo": "^40.0.0",
+    "expo-splash-screen": "~0.8.1",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react-dom": "16.13.1",
     "react": "16.13.1",
+    "react-dom": "16.13.1",
     "react-native": "0.63.4",
     "react-native-builder-bob": "^0.17.1",
-    "release-it": "^14.2.2",
-    "typescript": "^4.1.3",
-
-    "expo": "^40.0.0",
-    "expo-splash-screen": "~0.8.1",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.14.9"
+    "react-native-web": "^0.15.0",
+    "typescript": "^4.1.3"
   }
 }
