--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -4,7 +4,7 @@
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
-  "typings": "lib/typescript/src/index.d.ts",
+  "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -51,6 +51,7 @@
     "@react-aria/selection": "^3.3.1",
     "@react-native-aria/interactions": "^0.2.1",
     "@react-native-aria/overlays": "^0.2.1",
+    "@react-native-aria/utils": "^0.2.1",
     "@react-stately/collections": "^3.3.0",
     "@react-stately/menu": "^3.2.1",
     "@react-stately/tree": "^3.1.2",
