--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@react-native-aria/overlays",
-  "version": "0.2.1",
+  "version": "0.2.2-alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
-  "typings": "lib/typescript/src/index.d.ts",
+  "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
@@ -53,6 +53,7 @@
   },
   "peerDependencies": {
     "react": "*",
+    "react-dom": "*",
     "react-native": "*"
   },
   "jest": {
