--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-native-aria/overlays",
-  "version": "0.2.2-alpha.0",
-  "description": "mono repo setup with bob",
+  "version": "0.2.2-alpha.4",
+  "description": "Overlay utilities. Part of react-native-aria",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "typings": "lib/typescript/index.d.ts",
