--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/checkbox",
-  "version": "0.2.2-alpha.0",
+  "version": "0.2.2",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -50,7 +50,7 @@
     "@react-aria/checkbox": "^3.2.1",
     "@react-aria/utils": "^3.5.0",
     "@react-native-aria/toggle": "^0.2.2-alpha.0",
-    "@react-native-aria/utils": "^0.2.1",
+    "@react-native-aria/utils": "^0.2.2",
     "@react-stately/toggle": "^3.2.1"
   },
   "peerDependencies": {
