--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/switch",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -24,7 +24,7 @@
   "dependencies": {
     "@react-aria/switch": "^3.1.1",
     "@react-aria/utils": "^3.5.0",
-    "@react-native-aria/toggle": "^0.2.2-alpha.0",
+    "@react-native-aria/toggle": "^0.2.3",
     "@react-stately/toggle": "^3.2.1",
     "@react-types/switch": "^3.1.1"
   },
