--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/tabs",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "This library is a part of react-native-aria.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -52,12 +52,12 @@
     "react-native": "*"
   },
   "dependencies": {
+    "@react-aria/i18n": "^3.3.0",
     "@react-aria/tabs": "3.0.0-alpha.2",
+    "@react-native-aria/interactions": "^0.2.3",
+    "@react-native-aria/utils": "^0.2.3",
     "@react-stately/tabs": "3.0.0-alpha.1",
-    "@react-types/tabs": "3.0.0-alpha.2",
-    "@react-native-aria/utils": "^0.2.2",
-    "@react-native-aria/interactions": "^0.2.2",
-    "@react-aria/i18n" : "^3.3.0"
+    "@react-types/tabs": "3.0.0-alpha.2"
   },
   "jest": {
     "preset": "react-native",
