--- a/packages/listbox/package.json
+++ b/packages/listbox/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@react-native-aria/checkbox",
+  "name": "@react-native-aria/listbox",
   "version": "0.2.3",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
+  "types": "lib/typescript/index.d.ts",
   "typings": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
@@ -46,16 +47,19 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
-  "dependencies": {
-    "@react-aria/checkbox": "^3.2.1",
-    "@react-aria/utils": "^3.6.0",
-    "@react-native-aria/toggle": "^0.2.3",
-    "@react-native-aria/utils": "^0.2.3",
-    "@react-stately/toggle": "^3.2.1"
-  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "dependencies": {
+    "@react-aria/listbox": "^3.2.4",
+    "@react-types/listbox":"^3.1.1",
+    "@react-aria/utils": "^3.6.0",
+    "@react-types/shared":"^3.4.0",
+    "@react-aria/label": "^3.1.1",
+    "@react-aria/selection": "^3.3.2",
+    "@react-native-aria/utils":"^0.2.3",
+    "@react-native-aria/interactions":"^0.2.2"
   },
   "jest": {
     "preset": "react-native",
