--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/combobox",
-  "version": "0.2.3",
+  "version": "0.2.4.alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
