--- a/packages/listbox/package.json
+++ b/packages/listbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/listbox",
-  "version": "0.2.3",
+  "version": "0.2.3.alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
