--- a/packages/combobox/package.json
+++ b/packages/combobox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/combobox",
-  "version": "0.2.4.alpha.0",
+  "version": "0.2.4-alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -57,7 +57,7 @@
     "@react-aria/live-announcer": "^3.0.0-alpha.0",
     "@react-types/button": "^3.3.1",
     "@react-aria/overlays": "^3.6.1",
-    "@react-native-aria/utils": "^0.2.3"
+    "@react-native-aria/utils": "^0.2.4"
   },
   "jest": {
     "preset": "react-native",
