--- a/packages/listbox/package.json
+++ b/packages/listbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/listbox",
-  "version": "0.2.3.alpha.0",
+  "version": "0.2.4-alpha.0",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -58,7 +58,7 @@
     "@react-types/shared":"^3.4.0",
     "@react-aria/label": "^3.1.1",
     "@react-aria/selection": "^3.3.2",
-    "@react-native-aria/utils":"^0.2.3",
+    "@react-native-aria/utils":"^0.2.4",
     "@react-native-aria/interactions":"^0.2.2"
   },
   "jest": {
