--- a/packages/listbox/package.json
+++ b/packages/listbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/listbox",
-  "version": "0.2.4-alpha.0",
+  "version": "0.2.4-alpha.2",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -52,14 +52,14 @@
     "react-native": "*"
   },
   "dependencies": {
-    "@react-aria/listbox": "^3.2.4",
-    "@react-types/listbox":"^3.1.1",
-    "@react-aria/utils": "^3.6.0",
-    "@react-types/shared":"^3.4.0",
     "@react-aria/label": "^3.1.1",
+    "@react-aria/listbox": "^3.2.4",
     "@react-aria/selection": "^3.3.2",
-    "@react-native-aria/utils":"^0.2.4",
-    "@react-native-aria/interactions":"^0.2.2"
+    "@react-aria/utils": "^3.6.0",
+    "@react-native-aria/interactions": "^0.2.2",
+    "@react-native-aria/utils": "^0.2.6",
+    "@react-types/listbox": "^3.1.1",
+    "@react-types/shared": "^3.4.0"
   },
   "jest": {
     "preset": "react-native",
