--- a/packages/disclosure/package.json
+++ b/packages/disclosure/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/disclosure",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -48,13 +48,13 @@
     "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
+    "@react-stately/toggle": "*",
     "react": "*",
-    "react-native": "*",
-    "@react-stately/toggle":"*" 
+    "react-native": "*"
   },
   "dependencies": {
-    "@react-aria/utils":"^3.6.0",
-    "@react-native-aria/utils":"^0.2.4"
+    "@react-aria/utils": "^3.6.0",
+    "@react-native-aria/utils": "^0.2.6"
   },
   "jest": {
     "preset": "react-native",
