--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/overlays",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Overlay utilities. Part of react-native-aria",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -35,7 +35,8 @@
     "@react-aria/overlays": "^3.7.0",
     "@react-native-aria/utils": "^0.2.6",
     "@react-stately/overlays": "^3.1.1",
-    "@react-types/overlays": "^3.4.0"
+    "@react-types/overlays": "^3.4.0",
+    "dom-helpers": "^5.0.0"
   },
   "keywords": [
     "react-native",
