--- a/packages/listbox/package.json
+++ b/packages/listbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/listbox",
-  "version": "0.2.4-alpha.2",
+  "version": "0.2.4-alpha.3",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -52,6 +52,7 @@
     "react-native": "*"
   },
   "dependencies": {
+    "@react-aria/interactions": "^3.3.2",
     "@react-aria/label": "^3.1.1",
     "@react-aria/listbox": "^3.2.4",
     "@react-aria/selection": "^3.3.2",
