--- a/packages/menu/package.json
+++ b/packages/menu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/menu",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "mono repo setup with bob",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -47,8 +47,10 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "@react-aria/interactions": "^3.3.2",
     "@react-aria/menu": "^3.1.3",
     "@react-aria/selection": "^3.3.1",
+    "@react-aria/utils": "^3.6.0",
     "@react-native-aria/interactions": "^0.2.3",
     "@react-native-aria/overlays": "^0.2.1",
     "@react-native-aria/utils": "^0.2.6",
