--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -36,7 +36,8 @@
     "@react-native-aria/utils": "^0.2.6",
     "@react-stately/overlays": "^3.1.1",
     "@react-types/overlays": "^3.4.0",
-    "dom-helpers": "^5.0.0"
+    "dom-helpers": "^5.0.0",
+    "@react-aria/interactions": "^3.3.2"
   },
   "keywords": [
     "react-native",
