--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-aria/overlays",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Overlay utilities. Part of react-native-aria",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -32,12 +32,12 @@
     "bootstrap": "yarn example && yarn && yarn pods"
   },
   "dependencies": {
+    "@react-aria/interactions": "^3.3.2",
     "@react-aria/overlays": "^3.7.0",
     "@react-native-aria/utils": "^0.2.6",
     "@react-stately/overlays": "^3.1.1",
     "@react-types/overlays": "^3.4.0",
-    "dom-helpers": "^5.0.0",
-    "@react-aria/interactions": "^3.3.2"
+    "dom-helpers": "^5.0.0"
   },
   "keywords": [
     "react-native",
