--- a/packages/styled/tsconfig.json
+++ b/packages/styled/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["./src"],
   "exclude": ["node_modules", "example"],
+  "path": { "@gluestack/styled": ["../styled/src"] },
   "compilerOptions": {
     "emitDeclarationOnly": true,
     "noEmit": false,
