--- a/popper/example/native/package.json
+++ b/popper/example/native/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
-    "find-yarn-workspace-root": "^2.0.0",
+    "find-yarn-workspace-root": "^2.0.0"
+  },
+  "devDependencies": {
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
-  },
-  "devDependencies": {
+    "react-native-web": "~0.18.9",
     "@babel/core": "^7.12.9",
     "@expo/webpack-config": "^0.17.2",
     "@types/react": "~18.0.14",
