--- a/packages/styled/.babelrc.json
+++ b/packages/styled/.babelrc.json
@@ -1,4 +1,4 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"]
-  // "plugins": ["transform-remove-console"]
+  "presets": ["module:metro-react-native-babel-preset"],
+  "plugins": ["transform-remove-console"]
 }
