--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "husky": "^8.0.2",
     "prettier": "^2.7.1",
+    "release-it": "^15.5.1",
     "turbo": "latest"
   },
   "packageManager": "yarn@1.22.17"
