feat: adding accessibility

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "bob build",
     "clean": "rm -rf lib",
-    "dev:web": "cd example/native && yarn web --clear"
+    "dev:web": "cd example/native && yarn web --clear",
+    "storybook": "cd example/native/storybook && yarn web --clear"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
