--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,8 @@
     "@gluestack/styled": "*",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
+    "lodash.has": "^4.5.2",
+    "lodash.isnil": "^4.0.0",
     "lodash.merge": "^4.6.2"
   },
   "peerDependencies": {
