--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,9 +30,11 @@
     "@gluestack/styled": "*",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
+    "@react-native-aria/utils": "^0.2.8",
     "@react-stately/toggle": "^3.4.3",
     "lodash.isnil": "^4.0.0",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "lodash.omit": "^4.5.0"
   },
   "peerDependencies": {
     "react": "*",
