--- a/ui/package.json
+++ b/ui/package.json
@@ -28,8 +28,12 @@
   "dependencies": {
     "@expo/html-elements": "^0.2.2",
     "@gluestack/styled": "*",
+    "@react-aria/focus": "^3.10.0",
+    "@react-aria/visually-hidden": "^3.6.0",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
+    "@react-native-aria/slider": "^0.2.5-alpha.2",
+    "@react-stately/slider": "^3.2.3",
     "@react-stately/toggle": "^3.4.3",
     "lodash.isnil": "^4.0.0",
     "lodash.merge": "^4.6.2"
