--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,6 +32,7 @@
     "@react-native-aria/checkbox": "^0.2.3",
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
+    "@react-stately/checkbox": "^3.3.1",
     "@react-stately/toggle": "^3.4.3",
     "lodash.isnil": "^4.0.0",
     "lodash.merge": "^4.6.2"
