--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,9 +34,11 @@
     "@react-native-aria/focus": "^0.2.7",
     "@react-native-aria/interactions": "^0.2.8",
     "@react-native-aria/overlays": "^0.3.3",
+    "@react-native-aria/radio": "^0.2.5",
     "@react-native-aria/slider": "^0.2.5-alpha.2",
     "@react-native-aria/utils": "^0.2.8",
     "@react-stately/checkbox": "^3.3.1",
+    "@react-stately/radio": "^3.6.1",
     "@react-stately/toggle": "^3.4.3",
     "lodash.isnil": "^4.0.0",
     "lodash.merge": "^4.6.2",
