fix: refactor packages

--- a/packages/styled/example/native/tsconfig.json
+++ b/packages/styled/example/native/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gluestack/styled": ["../../src"]
+      "@gluestack/ui-styled": ["../../src"]
     },
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
