fix: modified config file

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"orgId":"team_yXKkrXfILoCHce0TnJh25g8W","projectId":"prj_0TIjnibEMhlnaJVLpgB4dfkJUMEo"}
+{
+  "orgId": "team_eWIW84kAwXIlj1IqOnIzhRS3",
+  "projectId": "prj_uIAoyGpswnzy7ol3YrwiHoXUCRNi"
+}
