--- a/packages/ui/example/native/package.json
+++ b/packages/ui/example/native/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gluestack/ui-components",
   "private": false,
-  "version": "0.1.0-alpha.4",
+  "version": "0.1.0-alpha.5",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
@@ -67,10 +67,7 @@
     "targets": [
       "commonjs",
       [
-        "module",
-        {
-          "configFile": true
-        }
+        "module"
       ],
       "typescript"
     ]
