feat: integrated utility props resolver

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -25,7 +25,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "@gluestack/ui-convert-utility-to-sx": "*"
   },
   "peerDependencies": {
     "react": "*",
