feat: style resolution based on states

--- a/cssify/example/native/app.json
+++ b/cssify/example/native/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "injector-example-native",
-    "slug": "injector-example-native",
+    "name": "cssify-example-native",
+    "slug": "cssify-example-native",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
