--- a/cssify/example/native/package.json
+++ b/cssify/example/native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "system-preference-query-example-native",
+  "name": "cssify-example-native",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
