--- a/cssify/package.json
+++ b/cssify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gluestack/system-preference-query",
+  "name": "@gluestack/cssify",
   "version": "0.0.1",
   "main": "lib/commonjs/index",
   "types": "lib/typescript/index.d.ts",
