--- a/styled/tsconfig.json
+++ b/styled/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["./src"],
   "exclude": ["node_modules", "example"],
   "path": {
-    "@gluestack/styled": ["../styled/src"],
+    "@gluestack/ui-styled": ["../styled/src"],
     "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
   },
   "compilerOptions": {
