--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -6,7 +6,7 @@
       "@gluestack/ui-creator": ["../creator/src/index"],
       "@gluestack/popper": ["../popper/src/index"],
       "@gluestack/ui": ["./src/index"],
-      "@gluestack/styled": ["../styled/src/index"]
+      "@gluestack/ui-styled": ["../styled/src/index"]
     },
     "emitDeclarationOnly": true,
     "noEmit": false,
