--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
-  "*.{js,ts,tsx,jsx}": ["eslint --quiet --fix"],
+  "*.{js,ts,tsx, jsx}": ["eslint --quiet --fix"],
+  "*.{ts,tsx}": ["tsc-files --skipLibCheck --noEmit"],
   "*.{json,md,html,js,jsx,ts,tsx}": ["prettier --write"]
 }
