chore: workflow fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run test Build
         run: |
           cd ./ui
+          git checkout development
           yes | yarn
 
       - name: Run tests
