--- a/config/example/native/tsconfig.json
+++ b/config/example/native/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "include": ["./src"],
-  "exclude": ["node_modules", "example"],
-  "path": {
-    "@gluestack/ui-styled": ["../styled/src"],
-    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"],
-    "@gluestack/config": ["../config/src"]
-  },
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "paths": {
+      "@gluestack/ui-styled": ["../../src"]
+    },
     "emitDeclarationOnly": true,
     "noEmit": false,
-    "baseUrl": ".",
     "declaration": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": true,
@@ -30,5 +26,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext"
-  }
+  },
+  "include": ["src"],
+  "exclude": ["lib", "node_modules"]
 }
