--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -3,8 +3,7 @@
   "exclude": ["node_modules", "example"],
   "path": {
     "@gluestack/ui-styled": ["../styled/src"],
-    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"],
-    "@gluestack/config": ["../config/src"]
+    "@gluestack/ui-convert-utility-to-sx": ["../ui-convert-utility-to-sx/src"]
   },
   "compilerOptions": {
     "emitDeclarationOnly": true,
