feat: unstyled menu

--- a/creator/package.json
+++ b/creator/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.2.2",
+    "@floating-ui/react": "^0.14.0",
     "@react-aria/focus": "^3.10.0",
     "@react-aria/visually-hidden": "^3.6.0",
     "@react-native-aria/checkbox": "^0.2.3",
