--- a/ui/package.json
+++ b/ui/package.json
@@ -54,6 +54,7 @@
     "babel-plugin-react-native-web": "^0.18.10",
     "find-yarn-workspace-root": "^2.0.0",
     "react-native-builder-bob": "^0.20.3",
+    "storybook-dark-mode": "^2.0.4",
     "typescript": "4.2.2"
   },
   "peerDependencies": {
