fix: config stored in config package

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -36,6 +36,7 @@
     "@gluestack/ui-convert-utility-to-sx": "*"
   },
   "peerDependencies": {
+    "@gluestack/config": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
