fix: merged conflict resolved

--- a/packages/styled/package.json
+++ b/packages/styled/package.json
@@ -29,7 +29,8 @@
     "@gluestack/css-injector": "*",
     "@gluestack/media-query": "*",
     "@gluestack/cssify": "*",
-    "@gluestack/ui-convert-utility-to-sx": "*"
+    "@gluestack/ui-convert-utility-to-sx": "*",
+    "@gluestack/config": "*"
   },
   "dependencies": {
     "lodash.merge": "^4.6.2",
