--- a/packages/styled/example/native/package.json
+++ b/packages/styled/example/native/package.json
@@ -20,14 +20,12 @@
     "@types/react-native": "~0.70.6",
     "babel-loader": "8.2.5",
     "ts-loader": "~8.2.0",
-    "typescript": "^4.6.3",
-    "@gluestack/ui-styled": "*"
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
     "@gluestack/ui-creator": "*",
     "@gluestack/ui": "*",
     "@gluestack/config": "*",
-    "@gluestack/ui-styled": "*",
     "react": "*",
     "react-dom": "*",
     "react-native": "*",
